# Backgammon-NN

./: .gitignore  CHANGELOG.md  Cargo.toml  DEV_REPORT.md  LICENSE  README.md  SPEC.md
crates/bgcore/: Cargo.toml
crates/bgcore/examples/: match.rs  nn_bench.rs  rollout_demo.rs
crates/bgcore/src/: bearoff.rs  board.rs  dice.rs  features.rs  game.rs  lib.rs  moves.rs  posid.rs  rollout.rs  search.rs
crates/bgcore/src/eval/: hce.rs  mod.rs  nn.rs  random.rs
crates/bgpy/: Cargo.toml  pyproject.toml
crates/bgpy/src/: lib.rs
gui/: _headless_test.py  app.py  sounds.py
models/: td.onnx  td_bucket.pt  td_contact.onnx  td_latest.pt  td_phase.pt  td_race.onnx
packaging/: backgammon.spec  build.py  make_icon.py
tools/movegen-difftest/: Cargo.toml
tools/movegen-difftest/src/: main.rs
tools/wildbg-bench/: Cargo.toml
tools/wildbg-bench/src/: main.rs
trainer/: bench_3ply.py  calibrate_buckets.py  compare_nets.py  console_play.py  cube.py  engine_api.py  eval_diag.py  eval_hybrid.py  export_bucketed.py  export_onnx.py  export_race.py  gen_distil_data.py  gen_positions.py  gen_positions_par.py  gen_rollout_data.py  gnubg_bench.py  gnubg_h2h.py  h2h_ply.py  label_rollouts.py  measure_classes.py  merge_npz.py  model.py  nply_h2h.py  overnight.py  plot_elo.py  plot_overnight.py  test_bindings.py  train.py  train_bucketed.py  train_features.py  train_phase.py  train_rollout.py
