[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bgcore"
requires-python = ">=3.9"
description = "Python bindings for the bgcore backgammon engine."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
# `onnx` bundles the native rollout engine (tract). Heavier build, but the
# Rollouts class and rollout opponent then work out of the box.
features = ["pyo3/extension-module", "onnx"]
