[package]
name = "wildbg-bench"
edition = "2021"
version = "0.1.0"
publish = false
description = "Benchmark bgcore engines against the wildbg reference engine (an external strength yardstick)."

[dependencies]
bgcore = { path = "../../crates/bgcore", features = ["onnx"] }
# wildbg reference engine (MIT/Apache-2.0) — its trained nets score ~5.9 error
# rate at GnuBG 2-ply, so it anchors our engine to a known scale.
engine = { path = "../../external/wildbg/crates/engine" }

[[bin]]
name = "wildbg-bench"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
